// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vowels: base greek map v0.2 locked keys + pairs snapshot (sorted, deterministic) 1`] = `
[
  "Ά",
  "Έ",
  "Ή",
  "Ί",
  "Ό",
  "Ύ",
  "Ώ",
  "ΐ",
  "Α",
  "Ε",
  "Η",
  "Ι",
  "Ο",
  "Υ",
  "Ω",
  "Ϊ",
  "Ϋ",
  "ά",
  "έ",
  "ή",
  "ί",
  "ΰ",
  "α",
  "ε",
  "η",
  "ι",
  "ο",
  "υ",
  "ω",
  "ϊ",
  "ϋ",
  "ό",
  "ύ",
  "ώ",
]
`;

exports[`vowels: base greek map v0.2 locked keys + pairs snapshot (sorted, deterministic) 2`] = `
[
  [
    "Ά",
    "A",
  ],
  [
    "Έ",
    "E",
  ],
  [
    "Ή",
    "E",
  ],
  [
    "Ί",
    "I",
  ],
  [
    "Ό",
    "O",
  ],
  [
    "Ύ",
    "Y",
  ],
  [
    "Ώ",
    "O",
  ],
  [
    "ΐ",
    "I",
  ],
  [
    "Α",
    "A",
  ],
  [
    "Ε",
    "E",
  ],
  [
    "Η",
    "E",
  ],
  [
    "Ι",
    "I",
  ],
  [
    "Ο",
    "O",
  ],
  [
    "Υ",
    "Y",
  ],
  [
    "Ω",
    "O",
  ],
  [
    "Ϊ",
    "I",
  ],
  [
    "Ϋ",
    "Y",
  ],
  [
    "ά",
    "A",
  ],
  [
    "έ",
    "E",
  ],
  [
    "ή",
    "E",
  ],
  [
    "ί",
    "I",
  ],
  [
    "ΰ",
    "Y",
  ],
  [
    "α",
    "A",
  ],
  [
    "ε",
    "E",
  ],
  [
    "η",
    "E",
  ],
  [
    "ι",
    "I",
  ],
  [
    "ο",
    "O",
  ],
  [
    "υ",
    "Y",
  ],
  [
    "ω",
    "O",
  ],
  [
    "ϊ",
    "I",
  ],
  [
    "ϋ",
    "Y",
  ],
  [
    "ό",
    "O",
  ],
  [
    "ύ",
    "Y",
  ],
  [
    "ώ",
    "O",
  ],
]
`;
